[package]
name = "woodpacker"
version = "0.1.0"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
egui = "*"
egui_glium = "*"
#cut-optimizer-2d = {version = "*", features = ["serialize"]}
cut-optimizer-2d = {git = "https://github.com/woelper/cut-optimizer-2d.git", features = ["serialize"]}