[package]
name = "woodpacker"
version = "0.1.0"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.14.0"
#cut-optimizer-2d = {version = "*", features = ["serialize"]}
cut-optimizer-2d = {git = "https://github.com/woelper/cut-optimizer-2d.git", features = ["serialize"]}


[features]
default = ["persistence"]
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown